# workspace-node-tools

./: .changes.json  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff-d.toml  justfile  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci-test.yml  ci.yml  preview.yml  reusable-cargo-test.yml  reusable-release-build.yml
.zed/: settings.json
crates/workspace_binding/: Cargo.toml
crates/workspace_binding/src/: binding_changes.rs  binding_config.rs  binding_git.rs  binding_manager.rs  binding_paths.rs  lib.rs
crates/workspace_std/: Cargo.toml
crates/workspace_std/src/: changes.rs  config.rs  dependency.rs  errors.rs  git.rs  lib.rs  manager.rs  package.rs  paths.rs  test.rs  types.rs  utils.rs  workspace.rs
src/: bumps.rs  changes.rs  conventional.rs  dependency.rs  git.rs  lib.rs  manager.rs  packages.rs  paths.rs  utils.rs
src/agent/: manager.rs
src/filesystem/: paths.rs
src/git/: commands.rs  conventional.rs  mod.rs
src/monorepo/: errors.rs  mod.rs  packages.rs  utils.rs
