[package]
name = "workspace-node-tools"
version = "0.3.0"
edition = "2021"
description = "Node workspace version tools"
repository = "https://github.com/websublime/workspace-node-tools"
license = "MIT OR Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
execute = "0.2.13"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
regex = "1.10.3"
wax = { version = "0.6.0", features = ["walk"] }
napi-derive = "2.16.8"
napi = { version = "2.16.7", default-features = false, features = ["napi4"] }
package_json_schema = "0.2.1"
icu = "1.5.0"
version-compare = "0.2"
git-cliff-core = "2.3.0"
chrono = "0.4.38"

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }
