[package]
name = "workspace-node-tools"
version = "1.0.4"
edition = "2021"
description = "Node workspace version tools"
repository = "https://github.com/websublime/workspace-node-tools"
license = "MIT OR Apache-2.0"
build = "build.rs"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
execute = "0.2.13"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
regex = "1.10.5"
wax = { version = "0.6.0", features = ["walk"] }
napi-derive = { version = "2.16.9", optional = true }
napi = { version = "2.16.8", default-features = false, features = ["napi9", "serde-json", "tokio_rt"], optional = true }
package_json_schema = "0.2.1"
icu = "1.5.0"
version-compare = "0.2"
git-cliff-core = "2.4.0"
chrono = "0.4.38"
semver = "1.0.23"
rand = "0.8.5"

[build-dependencies]
vergen = { version = "8.3.2", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }

[features]
customfeature = ["napi", "napi-derive"]
