[package]
name = "workspace_binding"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib"]
doctest = false

[lints]
workspace = true

[dependencies]
workspace_std = { workspace = true }
serde_json = { workspace = true }
napi = { version = "3.0.0-alpha", features = [
  "napi9",
  "serde-json",
  "tokio_rt",
] }
napi-build = { version = "2.1.3" }
napi-derive = { version = "3.0.0-alpha", default-features = false, features = [
  "type-def",
] }

[build-dependencies]
napi-build = { version = "2.1.3" }
