[package]
name = "workspace_std"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
git-cliff-core = "2.6.1"
itertools = "0.13.0"
petgraph = "0.6.5"
semver = { version = "1.0.23", features = ["serde"] }
version-compare = "0.2"
